err/ioant.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/ioant'...
Listing './lib/python3.5/site-packages/ioant/proto'...
Listing './lib/python3.5/site-packages/ioant/proto/messages'...
Listing './lib/python3.5/site-packages/ioant/proto/messages/generators'...
Listing './lib/python3.5/site-packages/ioant/proto/messages/generators/include'...
Listing './lib/python3.5/site-packages/ioant/proto/messages/generators/include/google'...
Listing './lib/python3.5/site-packages/ioant/proto/messages/generators/include/google/protobuf'...
Listing './lib/python3.5/site-packages/ioant/proto/messages/generators/nanopb'...
Listing './lib/python3.5/site-packages/ioant/proto/messages/generators/nanopb/proto'...
Listing './lib/python3.5/site-packages/ioant/proto/messages/generators/nanopb/proto/google'...
Compiling './lib/python3.5/site-packages/ioant/proto/proto.py'...
***   File "./lib/python3.5/site-packages/ioant/proto/proto.py", line 99
    print "message_list:" + str(message_list)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ioant/proto/templates'...
Compiling './lib/python3.5/site-packages/ioant/proto/templates/condition.template.py'...
*** Sorry: IndentationError: unexpected indent (condition.template.py, line 1)
Compiling './lib/python3.5/site-packages/ioant/proto/templates/proto_io.template.py'...
*** Sorry: IndentationError: unexpected indent (proto_io.template.py, line 9)
Listing './lib/python3.5/site-packages/ioant/sdk'...
Listing './lib/python3.5/site-packages/ioant/tests'...
Listing './lib/python3.5/site-packages/ioant/utils'...
Listing './lib/python3.5/site-packages/ioant-0.3.7.egg-info'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/paho'...
Listing './lib/python3.5/site-packages/paho/mqtt'...
Listing './lib/python3.5/site-packages/paho_mqtt-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
